--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     -->
     <link rel="manifest" href="/manifest.json" />
     <title>Portfolio - Full-Stack Web Developer</title>
+    <script src="https://www.alex-odhiambo.tech/tracker.js?monitorId=cmkwoape900021erhvz2mkn0j"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
