--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="/manifest.json" />
-    <title>Portfolio - Full-Stack Web Developer</title>
+    <title>Alex Odhiambo</title>
     <script src="https://www.alex-odhiambo.tech/tracker.js?monitorId=cmkwoape900021erhvz2mkn0j"></script>
   </head>
   <body>
